force-app/main/default/objects/LeadTracker_App_Config__mdt/LeadTracker_App_Config__mdt.object-meta.xml
<CustomObject>
    <description>Controls global application configuration and branding for the Lead Tracker application. The Default record drives all app-level settings.</description>
    <label>Lead Tracker App Config</label>
    <pluralLabel>Lead Tracker App Configs</pluralLabel>
</CustomObject>