force-app/main/default/objects/LeadTracker_App_Config__mdt/fields/App_Name__c.field-meta.xml
<CustomField>
    <fullName>App_Name__c</fullName>
    <description>Display name for the application shown in the header and page titles.</description>
    <label>App Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>