force-app/main/default/objects/LeadTracker_App_Config__mdt/fields/Default_Tab__c.field-meta.xml
<CustomField>
    <fullName>Default_Tab__c</fullName>
    <description>API name of the default landing tab when the app is opened (e.g., Lead_Tracker).</description>
    <label>Default Tab</label>
    <length>80</length>
    <type>Text</type>
</CustomField>