force-app/main/default/objects/LeadTracker_App_Config__mdt/fields/Logo_Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Logo_Static_Resource__c</fullName>
    <description>API name of the Static Resource containing the application logo image.</description>
    <label>Logo Static Resource</label>
    <length>100</length>
    <type>Text</type>
</CustomField>