force-app/main/default/objects/LeadTracker_App_Config__mdt/fields/Primary_Color__c.field-meta.xml
<CustomField>
    <fullName>Primary_Color__c</fullName>
    <description>Primary brand color in hex format (#RRGGBB). Applied to app header and primary actions.</description>
    <label>Primary Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>