force-app/main/default/objects/LeadTracker_App_Config__mdt/fields/Secondary_Color__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Color__c</fullName>
    <description>Secondary brand color in hex format (#RRGGBB). Applied to accents, links, and interactive elements.</description>
    <label>Secondary Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>