force-app/main/default/objects/LeadTracker_App_Config__mdt/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>Support contact email address displayed in the app footer and error messages.</description>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>